--- a/client/styles/BlogContainer.module.css
+++ b/client/styles/BlogContainer.module.css
@@ -2,7 +2,7 @@
 .container {
   min-height: 100%;
   padding: 20px;
-  margin: 10px 25px 20px 10px;
+  min-width: 600px;
   border-radius: 1rem;
   border: 1px dotted;
 }
@@ -10,9 +10,6 @@
   float: right;
   margin-bottom: 20px;
 }
-.blog_cards {
+.clear_Float {
   clear: both;
-  display: grid;
-  grid-template-columns: 350px 350px 350px 350px;
-  gap: 50px;
 }
