--- a/client/styles/Header.module.css
+++ b/client/styles/Header.module.css
@@ -3,7 +3,7 @@
   background-color: var(--aero-blue);
   color: var(--smokey-black);
   padding: 20px;
-  margin: 20px 25px 10px;
+  margin-bottom: 10px;
   border-radius: 1rem;
 }
 .header_heading {
