--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -31,6 +31,10 @@ body {
   --flame-orange: #ff5400;
   --cinnabar: #ef3e36;
 
+  /* blue grouping */
+  --capri: #62bfed;
+  --dodger-blue: #3590f3;
+
   /* green grouping */
   --sap-green: #447604;
   --dark-pastel: #0cca4a;
