--- a/client/src/styles/Blogs.module.css
+++ b/client/src/styles/Blogs.module.css
@@ -9,8 +9,10 @@
 }
 
 .header {
-  display: grid;
-  grid-template-columns: 70% 30%;
+  width: 100%;
+  text-align: center;
+  min-height: 60px;
+  border-bottom: 1px solid #000;
 }
 
 .body {
